# mergemate

./: .coverage  .coveragerc  .dockerignore  .editorconfig  .gitignore  .mergemate.toml  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.github_action  Dockerfile.github_action_dockerhub  MANIFEST.in  README.md  RELEASE_NOTES.md  SECURITY.md  action.yaml  codecov.yml  coverage.xml  docker-compose.yml  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: config.yml  feature-request.yml
.github/workflows/: auto-label.yml  build-and-test.yaml  code_coverage.yaml  codeql.yml  docs-ci.yaml  e2e_tests.yaml  mergemate-review.yaml  pre-commit.yml  publish.yml  release-drafter.yml
core-abilities/: index.html
core-abilities/compression_strategy/: index.html
core-abilities/dynamic_context/: index.html
core-abilities/fetching_ticket_context/: index.html
core-abilities/interactivity/: index.html
core-abilities/metadata/: index.html
core-abilities/self_reflection/: index.html
docker/: Dockerfile  Dockerfile.lambda
docker/mosaico/: README.md  docker-compose.mergemate.yml  pr-agent-solution-agent.json
docs/: README.md  mkdocs.yml
docs/docs/: CNAME  index.md  summary.md
docs/docs/core-abilities/: compression_strategy.md  dynamic_context.md  fetching_ticket_context.md  index.md  interactivity.md  metadata.md  self_reflection.md
docs/docs/css/: terminal.css
docs/overrides/: main.html
docs/site/: 404.html  index.html
faq/: index.html
github_action/: entrypoint.sh
installation/: index.html
installation/azure/: index.html
installation/bitbucket/: index.html
installation/gitea/: index.html
installation/github/: index.html
installation/gitlab/: index.html
installation/locally/: index.html
installation/mergemate/: index.html
mergemate/: cli.py  cli_pip.py  config_loader.py  custom_merge_loader.py  setup.py
mergemate/agent/: mergemate.py
mergemate/algo/: __init__.py  file_filter.py  git_patch_processing.py  language_handler.py  pr_processing.py  token_handler.py  utils.py
mergemate/core/: __init__.py  config.py  errors.py  logging.py  providers.py  rate_limiter.py  security.py  types.py
mergemate/git_providers/: __init__.py  azuredevops_provider.py  bitbucket_provider.py  bitbucket_server_provider.py  codecommit_client.py  codecommit_provider.py  gerrit_provider.py  git_provider.py  gitea_provider.py  github_provider.py  gitlab_provider.py  local_git_provider.py  utils.py
mergemate/identity_providers/: __init__.py  default_identity_provider.py
mergemate/log/: __init__.py
mergemate/mosaico/: card.py  diff_provider.py  dispatch.py  env_bridge.py  executor.py  observability.py  provider_registration.py  server.py
mergemate/secret_providers/: __init__.py  aws_secrets_manager_provider.py  google_cloud_storage_secret_provider.py
mergemate/server/: __init__.py  health.py
mergemate/servers/: atlassian-connect-qodo-merge.json  azuredevops_server_webhook.py  bitbucket_app.py  bitbucket_server_webhook.py  gerrit_server.py  gitea_app.py  github_action_runner.py  github_app.py  github_lambda_webhook.py  github_polling.py  gitlab_lambda_webhook.py  gitlab_webhook.py  help.py  utils.py
mergemate/settings/: .secrets.example.toml  .secrets_template.toml  configuration.toml  pr_description_only_description_prompts.toml  pr_description_only_files_prompts.toml  pr_help_prompts.toml  pr_reviewer_prompts.toml
mergemate/tools/: base.py  pr_add_docs.py  pr_code_suggestions.py  pr_config.py  pr_description.py  pr_generate_labels.py  pr_help_docs.py  pr_help_message.py  pr_line_questions.py  pr_questions.py  pr_reviewer.py  pr_similar_issue.py  pr_update_changelog.py  progress_comment.py  ticket_pr_compliance_check.py
overview/data_privacy/: index.html
search/: search_index.json
summary/: index.html
tests/: conftest.py
tests/e2e_tests/: e2e_utils.py  langchain_ai_handler.py  test_bitbucket_app.py  test_gitea_app.py  test_github_app.py  test_gitlab_webhook.py
tests/health_test/: main.py
tests/unittest/: _settings_helpers.py  test_add_docs_trigger.py  test_agent_core.py  test_apply_repo_settings_security.py  test_aws_secrets_manager_provider.py  test_azure_devops_comment.py  test_azure_devops_parsing.py  test_bitbucket_provider.py  test_cli_args_security.py  test_cli_config_branch.py  test_clip_tokens.py  test_codecommit_client.py  test_codecommit_provider.py  test_config_loader_secrets.py  test_convert_to_markdown.py  test_core_config.py  test_core_errors.py  test_core_rate_limiter.py  test_core_security.py  test_custom_merge_loader_security.py  test_delete_hunks.py  test_diff_pipeline_core.py  test_extend_patch.py  test_extra_config_url.py  test_extract_issue_from_branch.py  test_fetching_sub_issues.py  test_file_filter.py  test_find_line_number_of_relevant_line_in_file.py  test_fix_json_escape_char.py  test_fix_output.py  test_fresh_vars_functionality.py  test_get_max_tokens.py  test_git_provider_utils.py  test_gitea_provider.py  test_github_action_output.py  test_github_action_runner_core.py  test_github_app_timeout_core.py  test_github_provider_comments.py  test_github_provider_import.py  test_github_provider_repo_settings.py  (+44 more)
tools/: index.html
tools/add_docs/: index.html
tools/ask/: index.html
tools/describe/: index.html
tools/generate_labels/: index.html
tools/help/: index.html
tools/help_docs/: index.html
tools/improve/: index.html
tools/review/: index.html
tools/similar_issues/: index.html
tools/update_changelog/: index.html
usage-guide/: index.html
usage-guide/EXAMPLE_BEST_PRACTICE/: index.html
usage-guide/additional_configurations/: index.html
usage-guide/automations_and_usage/: index.html
usage-guide/changing_a_model/: index.html
usage-guide/configuration_options/: index.html
usage-guide/introduction/: index.html
usage-guide/mail_notifications/: index.html
(+72 files in other folders)
