[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mergemate-review"
version = "1.0.9"

authors = [
  { name = "MergeMate", email = "hello@mergemate.dev" },
]

maintainers = [
  { name = "MergeMate", email = "hello@mergemate.dev" },
]

description = "MergeMate — AI-powered pull request review and automation"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["AI", "Agents", "Pull Request", "Automation", "Code Review", "MergeMate", "PR Review"]

classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
"Homepage" = "https://github.com/imtiyaazsalie/mergemate"
"Documentation" = "https://imtiyaazsalie.github.io/mergemate/"
"Repository" = "https://github.com/imtiyaazsalie/mergemate"
"Issues" = "https://github.com/imtiyaazsalie/mergemate/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
  "mergemate*",
] # include mergemate and any sub-packages it finds under it.

[project.scripts]
mergemate-review = "mergemate.cli:run"

[tool.ruff]
line-length = 120

lint.select = [
  "E",    # Pyflakes
  "F",    # Pyflakes
  "B",    # flake8-bugbear
  "I001", # isort basic checks
  "I002", # isort missing-required-import
]

# First commit - only fixing isort
lint.fixable = [
  "I001", # isort basic checks
]

lint.unfixable = [
  "B", # Avoid trying to fix flake8-bugbear (`B`) violations.
]

lint.exclude = ["api/code_completions"]

lint.ignore = ["E999", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "E402",
] # Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
tests = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--color=yes --ignore=tests/unittest/test_azure_devops_comment.py --ignore=tests/unittest/test_ignore_repositories.py --ignore=tests/unittest/test_mosaico_env_bridge.py --ignore=tests/unittest/test_extend_patch.py --cov=mergemate --cov-report=xml --cov-report=term"
console_output_style = "progress"
