[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mergemate-review"
version = "1.0.9"

authors = [
  { name = "MergeMate", email = "hello@mergemate.dev" },
]

maintainers = [
  { name = "MergeMate", email = "hello@mergemate.dev" },
]

description = "MergeMate — AI-powered pull request review and automation"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["AI", "Agents", "Pull Request", "Automation", "Code Review", "MergeMate", "PR Review"]

classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
"Homepage" = "https://github.com/imtiyaazsalie/mergemate"
"Documentation" = "https://imtiyaazsalie.github.io/mergemate/"
"Repository" = "https://github.com/imtiyaazsalie/mergemate"
"Issues" = "https://github.com/imtiyaazsalie/mergemate/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
  "mergemate*",
] # include mergemate and any sub-packages it finds under it.

[project.scripts]
mergemate-review = "mergemate.cli:run"

[tool.ruff]
line-length = 120

lint.select = [
  "E",    # Pyflakes
  "F",    # Pyflakes
  "B",    # flake8-bugbear
  "I001", # isort basic checks
  "I002", # isort missing-required-import
]

# First commit - only fixing isort
lint.fixable = [
  "I001", # isort basic checks
]

lint.unfixable = [
  "B", # Avoid trying to fix flake8-bugbear (`B`) violations.
]

lint.exclude = ["api/code_completions"]

lint.ignore = [
    "B008",   # function-call-in-default-arg (FastAPI convention)
    "E501",   # line-too-long (enforced at 120; remaining are test strings)
    "F541",   # f-string-missing-placeholders (cosmetic, used for consistency)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "E402",   # module-import-not-at-top-of-file
  "F401",   # unused-import (re-exports)
]
"tests/**/*.py" = [
  "F401",   # unused-import (test fixtures)
  "F841",   # unused-variable (test assertions)
  "E722",   # bare-except (test cleanup)
  "B904",   # raise-without-from (test readability)
  "B011",   # assert-false (test convention)
  "B017",   # assert-raises-exception (pytest.raises)
  "B007",   # unused-loop-control-variable (test iterators)
  "B009",   # get-attr-with-constant (test imports)
  "B012",   # jump-statement-in-finally (test teardown)
  "F811",   # redefined-while-unused (test parametrization)
]
# Source files with intentional patterns (to be fixed incrementally)
"mergemate/algo/ai_handlers/langchain_ai_handler.py" = ["E722", "E402", "F401", "B009"]
"mergemate/algo/ai_handlers/litellm_ai_handler.py" = ["F401", "F841"]
"mergemate/algo/ai_handlers/litellm_helpers.py" = ["B904"]
"mergemate/algo/cli_args.py" = ["F401"]
"mergemate/algo/git_patch_processing.py" = ["F401", "B023", "E722"]
"mergemate/algo/pr_processing.py" = ["F401", "F841", "B007", "B905"]
"mergemate/algo/token_handler.py" = ["F841", "F401", "E722", "B006"]
"mergemate/algo/utils.py" = ["F401", "F841", "B006", "B007", "E722", "E713", "B005"]
"mergemate/config_loader.py" = ["B904", "E722"]
"mergemate/core/config.py" = ["B006", "F401"]
"mergemate/git_providers/azuredevops_provider.py" = ["F401", "F841"]
"mergemate/git_providers/bitbucket_provider.py" = ["F401", "F841", "E722", "B904"]
"mergemate/git_providers/bitbucket_server_provider.py" = ["F841"]
"mergemate/git_providers/codecommit_provider.py" = ["F401", "E722"]
"mergemate/git_providers/git_provider.py" = ["F841", "B012", "B027", "E714"]
"mergemate/git_providers/gitea_provider.py" = ["F401", "E722"]
"mergemate/git_providers/github_provider.py" = ["B904", "F841", "E721", "E722", "B007"]
"mergemate/git_providers/gitlab_provider.py" = ["F401", "F841", "E722", "B904"]
"mergemate/secret_providers/aws_secrets_manager_provider.py" = ["F401"]
"mergemate/servers/azuredevops_server_webhook.py" = ["E722", "F811"]
"mergemate/servers/bitbucket_app.py" = ["E722", "F841", "F811"]
"mergemate/servers/bitbucket_server_webhook.py" = ["E722", "F841", "B904"]
"mergemate/servers/gitea_app.py" = ["E722", "B904"]
"mergemate/servers/github_app.py" = ["E722", "F401", "F841"]
"mergemate/servers/github_polling.py" = ["E722", "F401", "F841"]
"mergemate/setup.py" = ["F401"]
"mergemate/tools/base.py" = ["F401", "B006"]
"mergemate/tools/pr_code_suggestions.py" = ["F841", "B905", "F821"]
"mergemate/tools/pr_description.py" = ["F401"]
"mergemate/tools/pr_generate_labels.py" = ["F841", "E721"]
"mergemate/tools/pr_help_docs.py" = ["F401", "F841"]
"mergemate/tools/pr_help_message.py" = ["F841", "F401"]
"mergemate/tools/pr_reviewer.py" = ["F401", "F841"]
"mergemate/tools/pr_similar_issue.py" = ["F841", "B904", "F401"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
tests = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--color=yes --ignore=tests/unittest/test_azure_devops_comment.py --ignore=tests/unittest/test_ignore_repositories.py --ignore=tests/unittest/test_mosaico_env_bridge.py --ignore=tests/unittest/test_extend_patch.py --cov=mergemate --cov-report=xml --cov-report=term"
console_output_style = "progress"
